# PXD_cpp_template

./: .gitignore  CMakeLists.txt  README.md  compile_shader.cmake  main.cpp  packages.json  setup.bat  setup.cmake  setup.py  setup.sh  utilities.cmake
.github/workflows/: build.yml  cd.yml  ci.yml  test.yml
cmakes/: compile_shader.cmake  setup.cmake  utilities.cmake
includes/: assert_checks.hpp  logger.hpp
sources/: assert_checks.cpp  logger.cpp
